--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.4",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "formik": "^2.4.6",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
